# remail3

./: .env.example  .gitignore  CHATBOT_IMPLEMENTATION.md  CHATBOT_QUICK_REFERENCE.md  README.md  TODO.conversations.md  TODO.md  alembic.ini  conf.py  database.db-journal  errors.txt  index.rst  init_db.py  migrate_db.py  mypy.ini  pixi.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-assign-author.yml  code-quality.yml  dependabot-auto-merge.yml  semantic-pull-request.yml
alembic/: env.py
alembic/versions/: 10c0496c9f82_init.py
docs/api/: modules.rst  remail.client.rst  remail.client.state.rst  remail.client.views.main.rst  remail.client.views.rst  remail.client.views.settings.rst  remail.client.widgets.chatbot.rst  remail.client.widgets.dashboard.rst  remail.client.widgets.mail_selection.rst  remail.client.widgets.rst  remail.client.widgets.settings.rst  remail.client.widgets.thread.rst  remail.controllers.dtos.conversations.rst  remail.controllers.dtos.rst  remail.controllers.dtos.threads.rst  remail.controllers.rst  remail.database.rst  remail.enums.rst  remail.errors.handlers.rst  remail.errors.rst  remail.interfaces.email.protocols.rst  remail.interfaces.email.rst  remail.interfaces.email.services.rst  remail.interfaces.llm.dto.rst  remail.interfaces.llm.enums.rst  remail.interfaces.llm.response.rst  remail.interfaces.llm.rst  remail.interfaces.rst  remail.models.rst  remail.rst  remail.utils.rst
remail/: __init__.py  controller.py
remail/client/: __init__.py  home.py  index.py  main.py  scheduler.py
remail/controllers/: __init__.py  account_controller.py  contacts_controller.py  conversations_controller.py  email_controller.py  llm_controller.py  search_controller.py  settings_controller.py  stateful_llm_controller.py  tag_controller.py  tagging_controller.py  thread_controller.py
remail/database/: __init__.py  db.py  init_db.py  models.py  schema_migration.py
remail/email_api/: credentials_helper.py  service.py  test_email_api.py
remail/enums/: __init__.py  auth_methods.py  connection_security.py  contact_type.py  contacts_type.py  conversation_type.py  email_folders.py  font_family.py  font_size.py  language.py  main_sub_view.py  main_view.py  protocol.py  settings_sub_view.py  theme_mode.py  timezone.py  user_account_categories.py
remail/errors/: __init__.py  email_error.py  invalid_login_data.py  not_logged_in.py  recipients_fail.py  server_connection_fail.py  smtp_data_false.py  unknown_error.py
remail/fixtures/: __init__.py  conversation_fixtures.py
remail/frontend/: home.py
remail/interfaces/: __init__.py
remail/llm/: RAG_Backend.py  chatbot.py  testing.py
remail/models/: __init__.py  base.py  chat_message.py  chat_session.py  contact.py  conversation.py  conversation_contact.py  email.py  email_chunk.py  email_reception.py  email_tag.py  settings.py  tag.py  tag_email.py  thread.py  user.py  user_conversation.py
remail/scripts/: seed_demo_data.py
remail/util/: request.py
remail/utils/: file_opener.py  session_management.py  theme.py  timer.py
remail3-main/: pyproject.toml
remail3-main/tests/: __init__.py  test_non_ui_smoke_coverage.py
scripts/: load_env.sh
tests/: __init__.py  conftest.py  test_non_ui_smoke_coverage.py  test_smoke.py  test_thread_data.py
tests/client/: __init__.py  test_client_smoke_coverage.py  test_index.py
tests/controllers/: __init__.py  test_account_controller.py  test_contacts_controller.py  test_conversation_dto.py  test_conversations_controller.py  test_email_controller.py  test_llm_controller.py  test_llm_controller_chat.py  test_settings_controller.py  test_thread_controller.py  (+1 more)
(+286 files in other folders)
