[project]
name = "remail"
version = "0.1.0"
description = "ReMail - Email management with AI-powered features"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.27,<0.0.28",
    "sqlalchemy>=2.0.44,<3",
    "flet>=0.28.3,<0.29",
    "keyring>=25.7.0,<26",
    "werkzeug>=3.1.3,<4",
    "transformers>=4.57.1,<5",
    "sentence-transformers>=5.1.2,<6",
    "types-pytz>=2025.2.0.20251108,<2026",
    "llama-index>=0.14.8,<0.15",
    "llama-index-llms-openai-like>=0.5.3,<0.6",
    "imapclient>=3.0.1,<4",
    "llama-cpp-python>=0.3.16,<0.4",
    "llama-index-embeddings-huggingface>=0.6.1,<0.7",
    "llama-index-readers-database>=0.5.1,<0.6"
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.3"
pytest-mock = ">=3.14.0"
pytest-cov = ">=6.0.0"
ruff = ">=0.8.4"
mypy = ">=1.13.0"
vulture = ">=2.11"
bandit = ">=1.7.9"
types-requests = ">=2.32.0.20241016"

[tool.pixi.environments]
default = ["dev"]

[tool.pixi.activation]
scripts = ["scripts/load_env.sh"]

[tool.pixi.tasks]
# 1) Ruff lint + format
format-lint = "ruff check --fix ."
format-code = "ruff format ."
format = { depends-on = ["format-lint", "format-code"] }

# 2) Ruff lint + format check
lint = "ruff check ."
format-code-check = "ruff format --check ."
format-check = { depends-on = ["lint", "format-code-check"] }

# 3) Type checking
typecheck = "mypy remail --explicit-package-bases"

# 4) Dead code detection
deadcode = "vulture remail --exclude remail"

# 5) Security scan
security = "bandit -r remail -x remail/frontend,remail/llm,remail/email_api,remail/database,remail/controller.py"

# 6) Tests
test = "pytest --tb=short -q"
test-cov = "pytest --cov=remail --cov-report=term --cov-report=html --cov-report=json"

# 7) Run all checks
check = { depends-on = ["format-check", "typecheck", "security", "test"] }

# 8) Database initialization
init-db = "python init_db.py"

# 9) Run the application
app = "python -m remail.client.index"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","W","F","I","B","C4","UP"]
ignore = ["E501","B008","W191"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests", "remail"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers","--strict-config","-ra"]

[tool.coverage.run]
relative_files = true
source = ["remail"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

